# MotoROS2-with-HC10

./: 20250314T093324_motoros2_debug_log.txt  README.md  discusion.md  speed.md
hc10_movit2v3/: .setup_assistant  CMakeLists.txt  package.xml
hc10_movit2v3/config/: initial_positions.yaml  joint_limits.yaml  motoman_hc10dt.srdf  motoman_hc10dt.urdf.xacro  moveit_controllers.yaml
hc10_movit2v3/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
hc10dt_moveit_config/: .setup_assistant
hc10dt_moveit_config/config/: joint_limits.yaml  motoman_hc10dt.ros2_control.xacro  motoman_hc10dt.srdf  motoman_hc10dt.urdf.xacro  moveit.rviz  moveit_controllers.yaml
hc10dt_moveit_config/launch/: demo.launch.py  demo_v2.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
hc10dt_moveit_config/urdf/: common_materials.xacro  hc10dt.urdf
hc20_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
hc20_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  motoman_hc20.ros2_control.xacro  motoman_hc20.srdf  motoman_hc20.urdf.xacro  moveit.rviz
hc20_moveit_config/launch/: demo.launch.py
hc20_moveit_config/urdf/: common_materials.xacro  hc20.urdf  hc20.xacro  hc20_macro.xacro
hc20_sim_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
hc20_sim_moveit_config/config/: motoman_hc20_sim.ros2_control.xacro  motoman_hc20_sim.srdf  motoman_hc20_sim.urdf.xacro  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
hc20_sim_moveit_config/launch/: demo.launch.py  demo_v2.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
hc20_sim_moveit_config/urdf/: fanuc.urdf  hc20_sim.urdf  hc20_sim.xacro  hc20_sim_macro.xacro
hello_moveit/: CMakeLists.txt  package.xml
hello_moveit/launch/: EtoQ.py
hello_moveit/src/: hello_moveit.cpp  linear_move.cpp  ptp_move.cpp
install/: local_setup.sh  setup.sh
install/hc10dt_moveit_config/share/ament_index/resource_index/package_run_dependencies/: hc10dt_moveit_config
install/hc10dt_moveit_config/share/ament_index/resource_index/parent_prefix_path/: hc10dt_moveit_config
install/hc10dt_moveit_config/share/hc10dt_moveit_config/: .setup_assistant  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/hc10dt_moveit_config/share/hc10dt_moveit_config/cmake/: hc10dt_moveit_configConfig-version.cmake  hc10dt_moveit_configConfig.cmake
install/hc10dt_moveit_config/share/hc10dt_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  motoman_hc10dt.ros2_control.xacro  motoman_hc10dt.srdf  motoman_hc10dt.urdf.xacro  moveit.rviz  moveit_controllers.yaml  pilz_cartesian_limits.yaml  ros2_controllers.yaml  sensors_3d.yaml
install/hc10dt_moveit_config/share/hc10dt_moveit_config/environment/: ament_prefix_path.dsv  path.dsv
install/hc10dt_moveit_config/share/hc10dt_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
install/hc10dt_moveit_config/share/hc10dt_moveit_config/meshes/collision/: base_link.stl  link_1_s.stl  link_2_l.stl  link_3_u.stl  (+3 more)
install/hc10dt_moveit_config/share/hc10dt_moveit_config/scripts/: demo_move.py
install/hc10dt_moveit_config/share/hc10dt_moveit_config/urdf/: common_colors.xacro  common_materials.xacro  hc10dt.urdf  hc10dt.xacro  hc10dt_macro.xacro
install/hello_moveit/lib/hello_moveit/: current_poss  hello_moveit_node
install/hello_moveit/share/hello_moveit/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/hello_moveit/share/hello_moveit/cmake/: hello_moveitConfig-version.cmake  hello_moveitConfig.cmake
install/hello_moveit/share/hello_moveit/environment/: ament_prefix_path.dsv  path.dsv
install/motion_planning_python_api/lib/motion_planning_python_api/: motion_planning_python_api_planning_scene.py  motion_planning_python_api_tutorial.py
install/motion_planning_python_api/share/motion_planning_python_api/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/motion_planning_python_api/share/motion_planning_python_api/cmake/: motion_planning_python_apiConfig-version.cmake  motion_planning_python_apiConfig.cmake
install/motion_planning_python_api/share/motion_planning_python_api/config/: motion_planning_python_api_tutorial.rviz  motion_planning_python_api_tutorial.yaml
install/motion_planning_python_api/share/motion_planning_python_api/environment/: ament_prefix_path.dsv  path.dsv
install/motion_planning_python_api/share/motion_planning_python_api/launch/: motion_planning_python_api_tutorial.launch.py
log/: latest_build
motion_planning_python_api/: package.xml
motion_planning_python_api/launch/: motion_planning_python_api_tutorial.launch.py
motion_planning_python_api/scripts/: motion_planning_python_api_planning_scene.py  motion_planning_python_api_tutorial.py
mtc_tutorial/: CMakeLists.txt  package.xml
mtc_tutorial/launch/: pick_place_demo.launch.py
mtc_tutorial/src/: mtc_node.cpp  mtc_y_node.cpp
src/hc10dt_moveit_config/: .setup_assistant  CMakeLists.txt
src/hc10dt_moveit_config/config/: motoman_hc10dt.srdf
src/hc10dt_moveit_config/launch/: demo.launch.py  move_group.launch.py
src/hc10dt_moveit_config/scripts/: demo_move.py
src/hc10dt_moveit_config/urdf/: hc10dt.urdf  hc10dt.xacro  hc10dt_macro.xacro
src/hello_moveit/: CMakeLists.txt
src/hello_moveit/src/: hello_moveit.cpp
src/motion_planning_python_api/: CMakeLists.txt
(+11 files in other folders)
