<?xml version="1.0"?>
<package format="3">
  <name>motion_planning_python_api</name>
  <version>0.0.1</version>
  <description>Motion planning API example for Python in MoveIt2.</description>

  <maintainer email="jan.perenic@gmail.com">janperenic</maintainer>

  <license>Apache-2.0</license>

  <!-- Build tool dependency -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rclpy</build_depend>  <!-- Ensure rclpy is found during build -->

  <!-- Dependencies for running the scripts -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_visual_tools</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
